# Temperature-Spikes-Detection-in-Workstations

./: .env  .gitignore  Dockerfile  README.md  Temperature Spikes Detection in Workstations - Final.docx  Video_Script.docx  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run_demo.bat  run_detector.bat  setup.bat  setup.py
.github/workflows/: main.yml
Code/: api_server.py  data_collection.py  data_validation.py  feature_engineering.py  main.py  mitigation.py  model_training.py  real_time_detector.py  state_model.py  system_report.py
Utils/: file_utils.py
data/models/: feature_columns.pkl  isolation_forest.pkl  scaler.pkl
data/training/: labeled_training_data.csv
docs/: FINAL PROJECT REPORT.docx  Final Report.docx  Final_Report.md  LICENSE  Presentation_Outline.md  Project Report.docx  Technical Report.docx  User_Guide.md  VidScript.md  Video_Script_v2.md  architecture.md  evaluation.md  methodology.md  presentation.pptx  pyproject.toml
models/: isolation_forest_meta.json  model_metadata.json  scaler.pkl  system_state.json  temperature_spike_model.pkl
reports/: statistical_summary.csv
scripts/: cpu_stress_test.py  generate_anomalies.py
src/: main.py  monitor.py  record_screen.py  stress_test.py
src/cli/: commands.py  (+1 more)
tests/: test_core.py  test_cps_logic.py  test_monitor.py  test_predict.py  test_stress.py  test_train.py
thermal_system/: aggregator.py  api_server.py  data_collection.py  data_validation.py  feature_engineering.py  main.py  mitigation.py  model_training.py  real_time_detector.py  state_model.py  system_report.py
(+26 files in other folders)
